[CSharp6] Fixed the hover div is too short.

--- a/WebSite/WebTool/Content/assets/css/metro.css
+++ b/WebSite/WebTool/Content/assets/css/metro.css
@@ -296,6 +296,7 @@ Dropdowns
     font-weight: normal;
     line-height: 18px;
     white-space: nowrap;
+    height: 18px;
 }
 
     .dropdown-menu li > a:hover,
